plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'ru.npepub'
version = '1.0.0'

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

javafx {
    version = '21.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'ru.npepub.Code2PromptApplication'
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.14'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testImplementation 'org.assertj:assertj-core:3.25.3'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
}

test {
    useJUnitPlatform()
}

tasks.register('fatJar', Jar) {
    archiveClassifier = 'all'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes 'Main-Class': 'ru.npepub.Code2PromptApplication'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}

tasks.register('copyExtension', Copy) {
    from 'extension-chromium'
    into layout.buildDirectory.dir('dist/extension-chromium')
}

tasks.register('jpackage', Exec) {
    dependsOn 'fatJar'
    workingDir = layout.buildDirectory.asFile.get()

    def jarFile = layout.buildDirectory.file("libs/${project.name}-${version}-all.jar").get().asFile

    commandLine = [
            'jpackage',
            '--input', 'libs',
            '--dest', 'dist',
            '--name', 'Code2Prompt',
            '--main-jar', jarFile.name,
            '--main-class', 'ru.npepub.Code2PromptApplication',
            '--type', 'app-image',
            '--runtime-image', "${System.getProperty('java.home')}",
            '--icon', '../src/main/resources/icon.ico',
            '--app-version', version,
            '--vendor', 'Nikitin Ruslan',
            '--copyright', 'Copyright (c) 2025 npepub.ru'
    ]
}

tasks.register('zipApp', Zip) {
    dependsOn 'jpackage', 'copyExtension'
    from layout.buildDirectory.dir("dist/Code2Prompt")
    from(layout.buildDirectory.dir("dist/extension-chromium")) {
        into 'extension-chromium'
    }
    archiveFileName = "Code2Prompt-${version}-portable.zip"
    destinationDirectory = layout.buildDirectory.dir("dist")
}